Cube/.metadata/.plugins/org.eclipse.cdt.ui/Scheduler.build.log
12:17:35 **** Incremental Build of configuration Debug for project Scheduler ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/button.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/button.d" -MT"Core/Src/button.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/button.o"
../Core/Src/button.c: In function 'initButton':
../Core/Src/button.c:51:18: error: incompatible types when initializing type 'Button *' {aka 'struct _Button *'} using type 'Button' {aka 'struct _Button'}
   51 |   Button *this = buttonArray[index];
      |                  ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/button.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:17:35 Build Failed. 2 errors, 0 warnings. (took 352ms)

